<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:visible="false"
        android:id="@+id/action_remove"
        android:title="@string/remove"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"
        />
    <item
        android:visible="false"
        android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="always"
        android:icon="@drawable/ic_share"
        />
</menu>