<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="net.akmobile.youtubeapp.activities.ContactActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/input_name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_name"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_email"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/edittext_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/input_message"
            android:inputType="textMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_submit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
